--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,4 +1,89 @@
 {
-	"forms-desc": "Description of Forms for [[Special:Version]]",
-	"ext-forms-edit-error-form-sealed": "Error message shown when user attempts to edit a sealed form instance"
+	"@metadata": {
+		"authors": [
+			"Dejan Savuljesku",
+			"Patric Wirth"
+		]
+	},
+	"forms-desc": "{{desc|name=Forms}}",
+	"createforminstance": "Special page name for [[Special:CreateFormInstance]] special page",
+	"forms-createforminstance-form-name": "Title for [[Special:CreateFormInstance]] special page.\n{{Identical|Create $1}}\n*$1 - Name of the form, that is about to created",
+	"formeditor": "Special page name for [[Special:FormEditor]] special page",
+	"forms-api-get-definitions-no-name": "Error message when no name was given for \"name\" parameter in the \"forms-get-definitions\" api module",
+	"forms-api-get-definitions-not-exist": "Error message when the definition to the given name in the \"name\" parameter does not exist in the \"forms-get-definitions\" api module",
+	"forms-target-json-page-summary": "Default summary on page save when no summary was given on a form edit.\n*$1 - Name of the form, that was used to edit the page",
+	"forms-error-no-form-specified": "Error message, when no form is specified",
+	"forms-form-edit-title": "Display title on action form edit.\n*$1 - Name of the page, that is about to be created by the form",
+	"forms-edit-error-form-sealed": "Error message shown when user attempts to edit a sealed form instance",
+	"forms-api-form-submit-invalid-target": "Error message when the \"target\" proviced is invalid in the \"forms-form-submit\" api module",
+	"forms-error-form-mismatch": "Error message when the save failed due to a form name mismatch",
+	"forms-error-target-db-save-failed": "Generic error message when saving to database failed",
+	"forms-form-editor-title": "Title of the form editor.\n{{Identical|Form Editor}}",
+	"forms-form-editor-form-name-label": "Label for the \"form_name\" text field in the form editor.\n{{Identical|Form name}}",
+	"forms-form-editor-form-name-help": "Help message for the \"form_name\" text field in the form editor.",
+	"forms-form-editor-prop-title": "Label for the \"title\" text field in the form editor.\n{{Identical|Title}}",
+	"forms-form-editor-prop-showtitle": "Label for the \"showTitle\" checkbox field in the form editor.\n{{Identical|Display title}}",
+	"forms-form-editor-prop-showFormName": "Label for the \"showTitle\" checkbox field in the form editor.\n{{Identical|Display form name}}",
+	"forms-form-editor-prop-categories": "Label for the \"categories\" multiselect field in the form editor.\n{{Identical|Categories}}",
+	"forms-form-editor-prop-sealaftercreation": "Label for the \"sealAfterCreation\" checkbox field in the form editor.\n{{Identical|Seal after creation}}",
+	"forms-form-editor-prop-buttonsfloat": "Label for the \"buttonsFloat\" checkbox field in the form editor.\n{{Identical|Float buttons}}",
+	"forms-form-editor-prop-enableprogresssave": "Label for the \"enableProgressSave\" checkbox field in the form editor.\n{{Identical|Enable intermediate saving}}",
+	"forms-form-editor-prop-enableeditsummary": "Label for the \"enableEditSummary\" checkbox field in the form editor.\n{{Identical|Enable edit summary}}",
+	"forms-form-editor-prop-includable": "Label for the \"includable\" checkbox field in the form editor.\n{{Identical|Includable}}",
+	"forms-form-editor-prop-abstract": "Label for the \"abstract\" checkbox field in the form editor.\n{{Identical|Abstract}}",
+	"forms-form-editor-prop-partial": "Label for the \"partial\" checkbox field in the form editor.\n{{Identical|Partial}}",
+	"forms-form-editor-prop-targettype": "Label for the \"targetType\" dropdown select field in the form editor.\n{{Identical|Target Type}}",
+	"forms-form-editor-prop-targettitle": "Label for the \"targetTitle\" text field in the form editor.\n{{Identical|Title}}",
+	"forms-form-editor-prop-targetafteraction": "Label for the \"show_target_afterAction\" checkbox field in the form editor.\n{{Identical|Assign after action}}",
+	"forms-form-editor-prop-targettypejsononwikipage": "Label for target type \"json-on-wikipage\" select option in the form editor.\n{{Identical|JSON on wikipage}}",
+	"forms-form-editor-prop-targettypedatabase": "Label for target type \"database\" select option in the form editor.\n{{Identical|Database}}",
+	"forms-form-editor-prop-targetafteractiontype": "Label for the \"target.afterAction.type\" drop down field in the form editor.\n{{Identical|After action type}}",
+	"forms-form-editor-prop-targetafteractiontypenone": "Label for the default target option in \"target.afterAction.type\" drop down field in the form editor.\n{{Identical|No action}}",
+	"forms-form-editor-prop-targetafteractiontyperedirect": "Label for the \"redirect\" target option in \"target.afterAction.type\" drop down in the form editor.\n{{Identical|Redirect}}",
+	"forms-form-editor-prop-targetafteractiontypecallback": "Label for the \"target\" target option in \"target.afterAction.type\" drop down in the form editor.\n{{Identical|Callback}}",
+	"forms-form-editor-prop-targetafteractionurl": "Label for the \"target.afterAction.url\" text field in the form editor.\n{{Identical|Redirect to URL}}",
+	"forms-form-editor-prop-targetafteractioncallback": "Label for the \"target.afterAction.callback\" text field in the form editor.\n{{Identical|JS Callback function (advanced)}}",
+	"forms-form-editor-prop-extends": "Label for the \"extends\" dropdown select field in the form editor.\n{{Identical|Extends form}}",
+	"forms-form-editor-prop-use-form-revs": "Label for the \"useFormRevs\" checkbox field in the form editor.\n{{Identical|Keep track of revisions}}",
+	"forms-form-editor-prop-use-form-revs-help": "Help message for the \"useFormRevs\" checkbox field in the form editor.",
+	"forms-form-editor-form-props-label": "Label for properties section in form editor.\n{{Identical|Form properties}}",
+	"forms-form-editor-form-items-label": "Label for elements section in form editor.\n{{Identical|Form elements}}",
+	"forms-formelement-group-input": "Label for element group type \"input\" in form editor.\n{{Identical|Inputs}}",
+	"forms-formelement-group-layout": "Label for element group type \"layout\" in form editor.\n{{Identical|Layouts}}",
+	"forms-formelement-group-other": "Label for element group type \"other\" in form editor.\n{{Identical|Other}}",
+	"forms-label-appearance": "Label of the \"appearance\" booklet page in form editor.\n{{Identical|Appearance}}",
+	"forms-label-behaviour": "Label of the \"behaviour\" booklet page in form editor.\n{{Identical|Behaviour}}",
+	"forms-label-infrastructure": "Label of the \"infrastructure\" booklet page in form editor.\n{{Identical|Infrastructure}}",
+	"forms-label-target": "Label of the \"target\" booklet page in form editor.\n{{Identical|Target}}",
+	"forms-label-company-name": "Label for \"customerName\" text field in the test form.\n{{Identical|Name of the company}}",
+	"forms-label-employees-number": "Label for \"noOfEmployees\" number field in the test form.\n{{Identical|Number of employees}}",
+	"forms-label-city": "Label for \"city\" text field in the test form.\n{{Identical|City}}",
+	"forms-label-contacts": "Label for \"contracts\" booklet section in the test form.\n{{Identical|Contacts}}",
+	"forms-label-show-contacts": "Label for \"showContacts\" checkbox field in the test form.\n{{Identical|Show contacts}}",
+	"forms-label-show-address": "Label for \"showAddresses\" checkbox field in the test form.\n{{Identical|Show address}}",
+	"forms-label-sales": "Label for \"contactSales\" booklet page in the test form.\n{{Identical|Sales}}",
+	"forms-label-phone": "Label for \"phone\" text field in the test form.\n{{Identical|Phone}}",
+	"forms-label-email": "Label for \"email\" text field in the test form.\n{{Identical|Email}}",
+	"forms-label-production": "Label for \"contactProduction\" section in the test form.\n{{Identical|Production}}",
+	"forms-label-hq-address": "Label for \"addressHQBilling\" checkbox field in the test form.\n{{Identical|Headquarters}}",
+	"forms-label-street": "Label for \"addressHQStreet\" text field in the test form.\n{{Identical|Street}}",
+	"forms-label-hq-address-billing": "Label for \"addressHQBilling\" checkbox field in the test form.\n{{Identical|Is billing address?}}",
+	"forms-label-facilities": "Label for \"facilitiesTab\" section in the test form.\n{{Identical|Facilities}}",
+	"forms-label-management": "Label for \"management\" select option in the test form.\n{{Identical|Management}}",
+	"forms-label-warehouse": "Label for \"warehouse\" select option in the test form.\n{{Identical|Warehouse}}",
+	"forms-label-facilities-radio": "Label for \"facilities-radio\" select field in the test form.\n{{Identical|Facilities radio}}",
+	"forms-title-new-customer": "Title for test form \"new customer\".\n{{Identical|New customer}}",
+	"forms-form-editor-prop-targettypetemplate": "Label for target type \"template\" select option in the form editor.\n{{Identical|Template}}",
+	"forms-form-editor-prop-targettemplate": "Label for the \"target.template\" page selection field in the form editor.\n{{Identical|Template to use}}",
+	"forms-form-editor-target-template-field": "Label for the \"template_field\" dropdown selection field in the form editor.\n{{Identical|Template field}}",
+	"forms-form-editor-target-template-field-manual": "Label for the \"manual\" option in the \"template_field\" dropdown selection field in the form editor.\n{{Identical|(manual)}}",
+	"forms-form-meta-tag": "Meta text on pages left by editing with a form.\n*$1 - Name of the Form. Should be linked\n*$2 - Revision id of the form, that was used to edit the page",
+	"forms-form-editor-button-import-template": "Label for button that allowes importing form fields from a template in form editor",
+	"forms-form-editor-confirm-import-template": "Confirmation message, that tells the user, that this action will delete all current fields in the form and replace them with ones imported from the selected template. The User should be asked if the user wants to proceed!",
+	"apihelp-forms-get-definitions-summary": "{{doc-apihelp-summary|forms-get-definitions}}",
+	"apihelp-forms-form-submit-summary": "{{doc-apihelp-summary|forms-form-submit}}",
+	"right-forms-create-form": "{{doc-right|forms-create-form}}",
+	"right-forms-edit-form-definition": "{{doc-right|forms-edit-form-definition}}",
+	"action-forms-create-form": "{{doc-action|forms-create-form}}",
+	"action-forms-edit-form-definition": "{{doc-action|forms-edit-form-definition}}"
 }
