Allow to "Edit source" for form definitions
ERM?????

[4.1.x]

Change-Id: I485d25b7212b719332ed39d3a3daac2d69975f9f

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -85,5 +85,6 @@
 	"right-forms-create-form": "Create forms",
 	"right-forms-edit-form-definition": "Edit form definitions",
 	"action-forms-create-form": "create forms",
-	"action-forms-edit-form-definition": "edit form definitions"
+	"action-forms-edit-form-definition": "edit form definitions",
+	"forms-action-editsource": "Edit source"
 }
