--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -86,5 +86,6 @@
 	"right-forms-create-form": "{{doc-right|forms-create-form}}",
 	"right-forms-edit-form-definition": "{{doc-right|forms-edit-form-definition}}",
 	"action-forms-create-form": "{{doc-action|forms-create-form}}",
-	"action-forms-edit-form-definition": "{{doc-action|forms-edit-form-definition}}"
+	"action-forms-edit-form-definition": "{{doc-action|forms-edit-form-definition}}",
+	"forms-action-editsource": "Label for content action link"
 }
