Sync I18N from master

--- a/i18n/bn.json
+++ b/i18n/bn.json
@@ -1,8 +1,8 @@
 {
 	"@metadata": {
 		"authors": [
-			"আফতাবুজ্জামান",
-			"Hirok Raja"
+			"Hirok Raja",
+			"আফতাবুজ্জামান"
 		]
 	},
 	"forms-createforminstance-form-name": "$1 তৈরি করুন",
