--- a/i18n/sms.json
+++ b/i18n/sms.json
@@ -5,5 +5,6 @@
 		]
 	},
 	"forms-form-edit-title": "Muuʹtt $1",
-	"forms-label-show-address": "Čuäʹjet addrõõzz"
+	"forms-label-show-address": "Čuäʹjet addrõõzz",
+	"forms-form-editor-prop-categories": "Kategoria"
 }
