Add support for RL dependencies in the editor
[4.1.x]

ERM 27548

Change-Id: Ic4b38841eaa0805941abf2427c8dc84ed46b1a76

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -87,5 +87,7 @@
 	"right-forms-edit-form-definition": "{{doc-right|forms-edit-form-definition}}",
 	"action-forms-create-form": "{{doc-action|forms-create-form}}",
 	"action-forms-edit-form-definition": "{{doc-action|forms-edit-form-definition}}",
-	"forms-action-editsource": "Label for content action link"
+	"forms-action-editsource": "Label for content action link",
+	"forms-form-editor-prop-rl-deps": "Label for the form editor field that specifies the list of RL module dependencies (module names)",
+	"forms-form-editor-prop-rl-deps-help": "Help text for the form editor field that specifies the list of RL module dependencies (module names)"
 }
