--- a/i18n/en.json
+++ b/i18n/en.json
@@ -86,5 +86,7 @@
 	"right-forms-edit-form-definition": "Edit form definitions",
 	"action-forms-create-form": "create forms",
 	"action-forms-edit-form-definition": "edit form definitions",
-	"forms-action-editsource": "Edit source"
+	"forms-action-editsource": "Edit source",
+	"forms-form-editor-prop-rl-deps": "Resource loader dependencies",
+	"forms-form-editor-prop-rl-deps-help": "Specify list of ResourceLoader modules that should be loaded when the form is instantiated"
 }
