--- a/i18n/sd.json
+++ b/i18n/sd.json
@@ -5,5 +5,6 @@
 		]
 	},
 	"forms-form-editor-prop-title": "عنوان",
-	"forms-form-editor-prop-targettitle": "عنوان"
+	"forms-form-editor-prop-targettitle": "عنوان",
+	"forms-form-editor-prop-enableeditsummary": "سنوار جو تَتُ فعال ڪريو"
 }
