--- a/i18n/fa.json
+++ b/i18n/fa.json
@@ -4,5 +4,24 @@
 			"Jeeputer"
 		]
 	},
-	"forms-action-editsource": "ویرایش مبدأ"
+	"forms-action-editsource": "ویرایش مبدأ",
+	"forms-form-editor-prop-categories": "رده‌ها",
+	"forms-form-editor-prop-targettitle": "عنوان",
+	"forms-form-editor-prop-targettypedatabase": "پایگاه داده",
+	"forms-form-editor-prop-targetafteractiontyperedirect": "تغییرمسیر",
+	"forms-formelement-group-input": "ورودی‌ها",
+	"forms-formelement-group-other": "سایر",
+	"forms-label-target": "هدف",
+	"forms-label-company-name": "نام شرکت",
+	"forms-label-employees-number": "شمار کارکنان",
+	"forms-label-city": "شهر",
+	"forms-label-contacts": "مخاطب‌ها",
+	"forms-label-show-contacts": "نمایش مخاطب‌ها",
+	"forms-label-show-address": "نمایش نشانی",
+	"forms-label-phone": "تلفن",
+	"forms-label-email": "ایمیل",
+	"forms-label-production": "تولید",
+	"forms-label-hq-address": "دفتر مرکزی",
+	"forms-label-street": "خیابان",
+	"forms-form-editor-target-template-field-manual": "(دستی)"
 }
