--- a/i18n/io.json
+++ b/i18n/io.json
@@ -6,5 +6,7 @@
 	},
 	"forms-form-editor-prop-title": "Titulo",
 	"forms-form-editor-prop-categories": "Kategorii",
-	"forms-form-editor-prop-targettitle": "Titulo"
+	"forms-form-editor-prop-targettitle": "Titulo",
+	"forms-label-city": "Urbo",
+	"forms-label-email": "E-postal adreso"
 }
