--- a/i18n/sl.json
+++ b/i18n/sl.json
@@ -13,5 +13,6 @@
 	"forms-form-editor-prop-targettitle": "Naslov",
 	"forms-createforminstance-form-name": "Ustvari $1",
 	"forms-label-email": "E-pošta",
-	"forms-api-get-definitions-not-exist": "Opredelitev »$1« ne obstaja"
+	"forms-api-get-definitions-not-exist": "Opredelitev »$1« ne obstaja",
+	"forms-form-editor-prop-targettypetemplate": "Predloga"
 }
