Fix edit button message
[5.x]

ERM37716

Change-Id: Ie9d332ff7d0a640b099c5c2836ce450e936522b1
(cherry picked from commit 7958021c1170e0c341baef9cbf253a28dc9820b5)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -85,7 +85,7 @@
 	"right-forms-edit-form-definition": "Edit form definitions",
 	"action-forms-create-form": "create forms",
 	"action-forms-edit-form-definition": "edit form definitions",
-	"forms-action-editsource": "Edit source",
+	"forms-action-editsource": "Edit definition source",
 	"forms-form-editor-prop-rl-deps": "Resource loader dependencies",
 	"forms-form-editor-prop-rl-deps-help": "Specify list of ResourceLoader modules that should be loaded when the form is instantiated",
 	"forms-form-editor-prop-targettypeemail": "Email",
