Add missing I18N keys
[master]

ERM29138

Change-Id: I135b87bda69170c607501384f52dacc829199698
(cherry picked from commit bf9f167fb3feaae854984f29d7e49af86db4cc42)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -79,8 +79,16 @@
 	"forms-form-meta-tag": "Created using form [[$1]] (rev: $2)",
 	"forms-form-editor-button-import-template": "Import fields from template",
 	"forms-form-editor-confirm-import-template": "This will delete all current fields in the form and replace them with ones imported from the selected template. Are you sure you want to proceed?",
-	"apihelp-forms-get-definitions-summary": "Provides querying the existing form definitions",
+	"apihelp-forms-form-submit-param-data": "Data submitted by the form",
+	"apihelp-forms-form-submit-param-form": "Name of the form",
+	"apihelp-forms-form-submit-param-target": "Name of the target",
+	"apihelp-forms-form-submit-param-summary": "Edit summary",
 	"apihelp-forms-form-submit-summary": "Provides editing via forms",
+	"apihelp-forms-get-definitions-param-definitionType": "Requested type of the form definition",
+	"apihelp-forms-get-definitions-param-name": "Name of the form definition",
+	"apihelp-forms-get-definitions-param-type": "Type of the request. Can be 'query-available' or 'get-definition'",
+	"apihelp-forms-get-definitions-param-validForTime": "Time for which the form definition is valid",
+	"apihelp-forms-get-definitions-summary": "Provides querying the existing form definitions",
 	"right-forms-create-form": "Create forms",
 	"right-forms-edit-form-definition": "Edit form definitions",
 	"action-forms-create-form": "create forms",
@@ -94,7 +102,6 @@
 	"forms-form-editor-prop-target-email-body": "Content",
 	"forms-error-target-mail-send-failed": "Send mail failed",
 	"forms-error-target-mail-no-mail": "No valid email address available",
-
 	"forms-editor-create-form-label": "Create form",
 	"forms-editor-toolbar-cancel": "Cancel",
 	"forms-editor-toolbar-save-label": "Save",
