--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -81,8 +81,16 @@
 	"forms-form-meta-tag": "Meta text on pages left by editing with a form.\n*$1 - Name of the Form. Should be linked\n*$2 - Revision id of the form, that was used to edit the page",
 	"forms-form-editor-button-import-template": "Label for button that allowes importing form fields from a template in form editor",
 	"forms-form-editor-confirm-import-template": "Confirmation message, that tells the user, that this action will delete all current fields in the form and replace them with ones imported from the selected template. The User should be asked if the user wants to proceed!",
-	"apihelp-forms-get-definitions-summary": "{{doc-apihelp-summary|forms-get-definitions}}",
+	"apihelp-forms-form-submit-param-data": "Help message for the \"data\" parameter in the \"form-submit\" api module",
+	"apihelp-forms-form-submit-param-form": "Help message for the \"form\" parameter in the \"form-submit\" api module",
+	"apihelp-forms-form-submit-param-target": "Help message for the \"target\" parameter in the \"form-submit\" api module",
+	"apihelp-forms-form-submit-param-summary": "Help message for the \"summary\" parameter in the \"form-submit\" api module",
 	"apihelp-forms-form-submit-summary": "{{doc-apihelp-summary|forms-form-submit}}",
+	"apihelp-forms-get-definitions-param-definitionType": "Help message for the \"definitionType\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-name": "Help message for the \"name\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-type": "Help message for the \"type\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-validForTime": "Help message for the \"validForTime\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-summary": "{{doc-apihelp-summary|forms-get-definitions}}",
 	"right-forms-create-form": "{{doc-right|forms-create-form}}",
 	"right-forms-edit-form-definition": "{{doc-right|forms-edit-form-definition}}",
 	"action-forms-create-form": "{{doc-action|forms-create-form}}",
