Fix message key format
Message keys must be all lowercase.

Change-Id: I015a91e541d7375eae49099876ad1957cfc71d65

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -25,7 +25,7 @@
 	"forms-form-editor-form-name-label": "Label for the \"form_name\" text field in the form editor.\n{{Identical|Form name}}",
 	"forms-form-editor-prop-title": "Label for the \"title\" text field in the form editor.\n{{Identical|Title}}",
 	"forms-form-editor-prop-showtitle": "Label for the \"showTitle\" checkbox field in the form editor.\n{{Identical|Display title}}",
-	"forms-form-editor-prop-showFormName": "Label for the \"showTitle\" checkbox field in the form editor.\n{{Identical|Display form name}}",
+	"forms-form-editor-prop-showformname": "Label for the \"showTitle\" checkbox field in the form editor.\n{{Identical|Display form name}}",
 	"forms-form-editor-prop-categories": "Label for the \"categories\" multiselect field in the form editor.\n{{Identical|Category}}",
 	"forms-form-editor-prop-sealaftercreation": "Label for the \"sealAfterCreation\" checkbox field in the form editor.\n{{Identical|Seal after creation}}",
 	"forms-form-editor-prop-buttonsfloat": "Label for the \"buttonsFloat\" checkbox field in the form editor.\n{{Identical|Float buttons}}",
@@ -87,10 +87,10 @@
 	"apihelp-forms-form-submit-param-target": "Help message for the \"target\" parameter in the \"form-submit\" api module",
 	"apihelp-forms-form-submit-param-summary": "Help message for the \"summary\" parameter in the \"form-submit\" api module\n\n{{Doc-important|This refers to the summary of an edit, not to editing a summary!}}",
 	"apihelp-forms-form-submit-summary": "{{doc-apihelp-summary|forms-form-submit}}",
-	"apihelp-forms-get-definitions-param-definitionType": "Help message for the \"definitionType\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-definitiontype": "Help message for the \"definitiontype\" parameter in the \"get-definitions\" api module",
 	"apihelp-forms-get-definitions-param-name": "Help message for the \"name\" parameter in the \"get-definitions\" api module",
 	"apihelp-forms-get-definitions-param-type": "Help message for the \"type\" parameter in the \"get-definitions\" api module",
-	"apihelp-forms-get-definitions-param-validForTime": "Help message for the \"validForTime\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-validfortime": "Help message for the \"validfortime\" parameter in the \"get-definitions\" api module",
 	"apihelp-forms-get-definitions-summary": "{{doc-apihelp-summary|forms-get-definitions}}",
 	"right-forms-create-form": "{{doc-right|forms-create-form}}",
 	"right-forms-edit-form-definition": "{{doc-right|forms-edit-form-definition}}",
