Sync I18N from master

--- a/i18n/et.json
+++ b/i18n/et.json
@@ -2,8 +2,8 @@
 	"@metadata": {
 		"authors": [
 			"Kareyac",
-			"Rivoz",
-			"Pikne"
+			"Pikne",
+			"Rivoz"
 		]
 	},
 	"forms-form-editor-prop-categories": "Kategooriad",
