--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -3,11 +3,11 @@
 		"authors": [
 			"Ajeje Brazorf",
 			"Gomoko",
-			"Mahabarata",
-			"Paraboule",
-			"Verdy p",
 			"JLTRY",
-			"McDutchie"
+			"Mahabarata",
+			"McDutchie",
+			"Paraboule",
+			"Verdy p"
 		]
 	},
 	"forms-desc": "Cadre de formulaire complet pour MediaWiki",
