--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -3,9 +3,9 @@
 		"authors": [
 			"Ajeje Brazorf",
 			"Dejan Savuljesku",
+			"McDutchie",
 			"Patric Wirth",
-			"Verdy p",
-			"McDutchie"
+			"Verdy p"
 		]
 	},
 	"forms-desc": "{{desc|name=Forms}}",
