--- a/i18n/mk.json
+++ b/i18n/mk.json
@@ -99,5 +99,14 @@
 	"forms-editor-toolbar-done": "Готово",
 	"forms-editor-group-empty-help": "Образецот моментално нема елементи. Отворете го јазичето „Елементи на образецот“ и довлечете ги елементите тука",
 	"forms-form-editor-form-props-summary-label": "Опис",
-	"forms-form-editor-form-props-summary-placeholder": "Опишете ги направените измени"
+	"forms-form-editor-form-props-summary-placeholder": "Опишете ги направените измени",
+	"forms-form-editor-prop-showformname": "Прикажи име на образецот",
+	"apihelp-forms-form-submit-param-data": "Податоци поднесени од образецот",
+	"apihelp-forms-form-submit-param-form": "Назив на образецот",
+	"apihelp-forms-form-submit-param-target": "Назив на целта",
+	"apihelp-forms-form-submit-param-summary": "Опис на уредувањето",
+	"apihelp-forms-get-definitions-param-definitiontype": "Баран вид на одредба на образецот",
+	"apihelp-forms-get-definitions-param-name": "Назив на одредбата на образецот",
+	"apihelp-forms-get-definitions-param-type": "Вид на барањето. Може да биде „query-available“ или „get-definition“",
+	"apihelp-forms-get-definitions-param-validfortime": "Колку долго да важи одредбата на образецот"
 }
