--- a/i18n/sr-ec.json
+++ b/i18n/sr-ec.json
@@ -8,5 +8,6 @@
 	"forms-editor-toolbar-save-label": "Сачувај",
 	"forms-editor-toolbar-done": "Готово",
 	"forms-form-editor-form-props-summary-label": "Опис",
-	"forms-form-editor-form-props-summary-placeholder": "Опишите шта сте променили"
+	"forms-form-editor-form-props-summary-placeholder": "Опишите шта сте променили",
+	"apihelp-forms-form-submit-param-summary": "Опис измене"
 }
