--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -9,8 +9,7 @@
 		]
 	},
 	"forms-desc": "{{desc|name=Forms}}",
-	"createforminstance": "Special page name for [[Special:CreateFormInstance]] special page",
-	"forms-createforminstance-form-name": "Title for [[Special:CreateFormInstance]] special page.\n{{Identical|Create}}\n* $1 - Name of the form, that is about to created",
+	"editwithform": "Special page name for [[Special:EditWithForm]] special page",
 	"formeditor": "Special page name for [[Special:FormEditor]] special page",
 	"forms-api-get-definitions-no-name": "Error message when no name was given for \"name\" parameter in the \"forms-get-definitions\" api module",
 	"forms-api-get-definitions-not-exist": "Error message when the definition to the given name in the \"name\" parameter does not exist in the \"forms-get-definitions\" api module",
@@ -111,5 +110,12 @@
 	"forms-editor-toolbar-done": "Generic label for an done button",
 	"forms-editor-group-empty-help": "Help text for the empty group in the form editor",
 	"forms-form-editor-form-props-summary-label": "Field label for the summary field in the form editor",
-	"forms-form-editor-form-props-summary-placeholder": "Placeholder text for the summary field in the form editor"
+	"forms-form-editor-form-props-summary-placeholder": "Placeholder text for the summary field in the form editor",
+	"forms-target-page-label": "Label for the field specifying the target page in the form editor",
+	"forms-editor-create-form-instance-label": "Label for the button on Special:EditWithForm to create a new form instance",
+	"forms-form-definition-label": "Field name",
+	"forms-page-already-exists-no-form": "Error message when the page already exists and no form is specified",
+	"forms-definitions-not-exist": "Error message when the definition to the given name is not a valid form definition.\n$1 - form name",
+	"forms-action-edit-with-form": "Label for content action link.\n{{Identical|Edit with form}}",
+	"editwithform-with-title": "Special page title label. \n$1 - name of the page being edited"
 }
